Fix display issue on small screens with entrance animations

--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -3,7 +3,7 @@
   padding-top: 8rem;
 
   #profile-pic {
-    width: 26%;
+    width: 20.5%;
     height: auto;
     float: left;
     margin-right: 2.5rem;
